@@ -4,6 +4,7 @@ Process Hacker
  * NEW/IMPROVED:
    * Added cycle-based CPU usage for Windows 7
    * Added Show CPU Below 0.01
+   * Added OS Context column
    * Optimized retrieval of cycle time and private working set 
      information for Windows 7
  * FIXED:
